--- a/circle.yml
+++ b/circle.yml
@@ -1,7 +1,12 @@
 machine:
-  pre:
-    - curl -L https://aka.ms/InstallAzureCli | bash
-    - exec -l $SHELL
+machine:
+  python:
+    version: 3.5.2
+  post:
+    - echo "deb [arch=amd64] https://apt-mo.trafficmanager.net/repos/azure-cli/ wheezy main" | sudo tee /etc/apt/sources.list.d/azure-cli.list
+    - sudo apt-key adv --keyserver apt-mo.trafficmanager.net --recv-keys 417A0893
+    - sudo apt-get install apt-transport-https
+    - sudo apt-get update && sudo apt-get install azure-cli
 
 test:
   override:
