--- a/circle.yml
+++ b/circle.yml
@@ -10,4 +10,5 @@ machine:
 
 test:
   override:
-    - sh ./tests/azure/test.sh; sh ./tests/azure/cleanup.sh
+    - sh ./tests/azure/test.sh
+    - sh ./tests/azure/cleanup.sh
