--- a/circle.yml
+++ b/circle.yml
@@ -12,5 +12,5 @@ test:
   override:
     - sh ./tests/azure/test.sh:
         timeout: 1200000
-    - sh ./tests/azure/cleanup.sh:
-        timeout: 1200000
+    # - sh ./tests/azure/cleanup.sh:
+    #     timeout: 1200000
