--- a/circle.yml
+++ b/circle.yml
@@ -5,7 +5,7 @@ machine:
   post:
     - pip install --upgrade pip
     - pip install --user azure-cli
-    - echo $PATH
+    - PATH="$PATH:/usr/local/lib/python2.7/site-packages"
 
 test:
   override:
