--- a/circle.yml
+++ b/circle.yml
@@ -3,9 +3,7 @@ machine:
   python:
     version: 3.5.2
   post:
-    - echo "deb https://apt-mo.trafficmanager.net/repos/azure-cli/ wheezy main" | sudo tee /etc/apt/sources.list.d/azure-cli.list
-    - sudo apt-key adv --keyserver apt-mo.trafficmanager.net --recv-keys 417A0893
-    - sudo apt-get install apt-transport-https
+    - echo "deb http://apt-mo.trafficmanager.net/repos/azure-cli/ wheezy main" | sudo tee /etc/apt/sources.list.d/azure-cli.list
     - sudo apt-get update && sudo apt-get install azure-cli
 
 test:
