--- a/circle.yml
+++ b/circle.yml
@@ -10,8 +10,8 @@ test:
   override:
     - sh ./tests/azure/test.sh:
         timeout: 1200000
-    # - sh ./tests/azure/cleanup.sh:
-    #     timeout: 1200000
+    - sh ./tests/azure/cleanup.sh:
+        timeout: 1200000
 
 deployment:
   production:
